[build-system]
requires = ["setuptools == 68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "VNDUtils"
version = "0.0.1"
authors = [
  { name="Aykut Gorkem GELEN", email="aykut.gelen@erzincan.edu.tr" },
]
description = "A package that includes utils for spiking neural network design"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vnd-ogrenme/VNDUtils"
Issues = "https://github.com/vnd-ogrenme/VNDUtils/issues"